# tasktrack

./: .dockerignore  .env.prod.example  .mcp.json  CLAUDE.md  Dockerfile  KEYCLOAK_SETUP.md  Makefile  check_mcp.py  deployer.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.dev.example  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 993840ac9a18_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  auth_stub.py  bootstrap.py  config.py  db.py  events.py
backend/app/mcp/: auth.py  server.py  utils.py
backend/app/models/: __init__.py  base.py  comment.py  decision.py  gantt.py  link_type.py  notification.py  project.py  resolution.py  task.py  task_type.py  user.py  workflow.py
backend/app/schemas/: comment.py  decision.py  gantt.py  link_type.py  notification.py  project.py  resolution.py  task.py  task_type.py  workflow.py
backend/app/services/: comment_service.py  decision_service.py  gantt_service.py  link_type_service.py  notification_service.py  permissions.py  project_export_service.py  project_service.py  resolution_service.py  search_service.py  task_link_service.py  task_service.py  workflow_service.py
backend/scripts/: bootstrap_agent_user.py  reset_db.py
backend/tests/: conftest.py  test_board_columns.py  test_comments.py  test_decision_process.py  test_export.py  test_mcp.py  test_notifications.py  test_projects.py  test_search.py  test_task_type_workflow.py  test_tasks.py  test_views.py  test_workflows.py
deploy/: install.sh
(+166 files in other folders)
